--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  <h1>ARCHIT GUPTA</h1>
-<img src="../WhatsApp Image 2023-06-14 at 15.15.32.jpeg" height="150" alt="prince" /> 
+<img src="../WhatsApp Image 2023-06-14 at 15.15.32.jpeg" height="160" alt="Prince" /> 
 <ul>
    <h2> <li>Summary </li></h2>
    <ol>
