--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
  <h4><li>Recieve Student of the Class prize in (2022)</li></h4>
  <hr/>
  <h2><li>About me</li></h2>
- <h2><li><a href="./hobbie.html">HOBBIES</a></h2></li>
- <h2><li><a href="./contact.html">CONTACT</a></li></h2>
+ <h2><li><a href="./resume/hobbie.html">HOBBIES</a></h2></li>
+ <h2><li><a href="./resume/contact.html">CONTACT</a></li></h2>
  <hr/>
  <h2><footer>@AG verified</footer></h2>
 
